Improve deeply nested commands; add Sequence; documentation pass
Remove some vestigial code