@@ -80,9 +80,6 @@ test {
         exceptionFormat "full"
     }
     finalizedBy jacocoTestReport
-    // Set parallelism=1 so all virtual threads run on a single carrier thread
-    // This prevents users from needing to use concurrency constructs like locks and atomic boxes
-    jvmArgs(['--enable-preview', '-Djdk.virtualThreadScheduler.parallelism=1'])
 }
 
 if (project.hasProperty('onlylinuxathena') || project.hasProperty('onlylinuxarm32') || project.hasProperty('onlylinuxarm64') || project.hasProperty('onlywindowsarm64')) {
